@@ -92,6 +92,7 @@ static bool diff_need_update = false;  // ex_diffupdate needs to be called
 #define DIFF_INLINE_CHAR    0x8000  // inline highlight with character diff
 #define DIFF_INLINE_WORD    0x10000  // inline highlight with word diff
 #define DIFF_ANCHOR     0x20000  // use 'diffanchors' to anchor the diff
+#define DIFF_MERGE_BLOCKS  0x40000  // use 'mergeblocks' to get better highlight for words
 #define ALL_WHITE_DIFF (DIFF_IWHITE | DIFF_IWHITEALL | DIFF_IWHITEEOL)
 #define ALL_INLINE (DIFF_INLINE_NONE | DIFF_INLINE_SIMPLE | DIFF_INLINE_CHAR | DIFF_INLINE_WORD)
 #define ALL_INLINE_DIFF (DIFF_INLINE_CHAR | DIFF_INLINE_WORD)
@@ -2669,6 +2670,9 @@ int diffopt_changed(void)
     } else if (strncmp(p, "anchor", 6) == 0) {
       p += 6;
       diff_flags_new |= DIFF_ANCHOR;
+    } else if (strncmp(p, "mergeblocks", 11) == 0) {
+      p += 11;
+      diff_flags_new |= DIFF_MERGE_BLOCKS;
     } else if ((strncmp(p, "context:", 8) == 0) && ascii_isdigit(p[8])) {
       p += 8;
       diff_context_new = getdigits_int(&p, false, diff_context_new);
@@ -3093,6 +3097,100 @@ static void diff_refine_inline_char_highlight(diff_T *dp_orig, garray_T *linemap
   } while (pass++ < 4);  // use limited number of passes to avoid excessive looping
 }
 
+/// Refine inline word diff blocks by merging blocks that are only separated
+/// by whitespace or punctuation. This creates more coherent highlighting.
+static void diff_refine_inline_word_highlight(diff_T *dp_orig, garray_T *linemap, int idx1,
+                                              linenr_T start_lnum)
+{
+  int pass = 1;
+  do {
+    diff_T *dp = dp_orig;
+
+    while (dp != NULL && dp->df_next != NULL) {
+      // Only merge blocks on the same line
+      if (dp->df_lnum[idx1] + dp->df_count[idx1] - 1 >= linemap[idx1].ga_len
+          || dp->df_next->df_lnum[idx1] - 1 >= linemap[idx1].ga_len) {
+        dp = dp->df_next;
+        continue;
+      }
+
+      linemap_entry_T *entry1 =
+        &((linemap_entry_T *)linemap[idx1].ga_data)[dp->df_lnum[idx1]
+                                                    + dp->df_count[idx1] - 2];
+      linemap_entry_T *entry2 =
+        &((linemap_entry_T *)linemap[idx1].ga_data)[dp->df_next->df_lnum[idx1] - 1];
+
+      // Skip if blocks are on different lines
+      if (entry1->lineoff != entry2->lineoff) {
+        dp = dp->df_next;
+        continue;
+      }
+
+      // Calculate the gap between blocks
+      int gap_start = entry1->byte_start + entry1->num_bytes;
+      int gap_end = entry2->byte_start;
+      int gap_size = gap_end - gap_start;
+
+      // Merge adjacent diff blocks separated by small gaps (<=2 bytes) to reduce
+      // visual fragmentation.  Threshold of 2 bytes handles common single-character
+      // separators (spaces, punctuation) while preserving distinct changes.
+      if (gap_size <= 0 || gap_size > 2) {
+        dp = dp->df_next;
+        continue;
+      }
+
+      // Get the text between the two blocks
+      char *line = ml_get_buf(curtab->tp_diffbuf[idx1],
+                              start_lnum + entry1->lineoff);
+      char *gap_text = line + gap_start;
+
+      // Check if gap contains only whitespace and/or punctuation
+      bool only_non_word = true;
+      bool has_content = false;
+      for (int i = 0; i < gap_size && gap_text[i] != NUL; i++) {
+        has_content = true;
+        int char_class = mb_get_class_tab(gap_text + i,
+                                          curtab->tp_diffbuf[idx1]->b_chartab);
+        // class 2 is word characters, if we find any, don't merge
+        if (char_class == 2) {
+          only_non_word = false;
+          break;
+        }
+      }
+
+      // Merge if the gap is small and contains only non-word characters
+      if (has_content && only_non_word) {
+        // Check that the combined change size is reasonable
+        linenr_T total_change = 0;
+        for (int i = 0; i < DB_COUNT; i++) {
+          if (curtab->tp_diffbuf[i] != NULL) {
+            total_change += dp->df_count[i] + dp->df_next->df_count[i];
+          }
+        }
+
+        if (total_change >= gap_size * 2) {
+          // Merge the blocks by extending the first block to include the next
+          for (int i = 0; i < DB_COUNT; i++) {
+            if (curtab->tp_diffbuf[i] != NULL) {
+              dp->df_count[i] = dp->df_next->df_lnum[i] + dp->df_next->df_count[i]
+                                - dp->df_lnum[i];
+            }
+          }
+
+          diff_T *dp_next = dp->df_next;
+          dp->df_next = dp_next->df_next;
+          clear_diffblock(dp_next);
+
+          // Don't advance dp, check if can merge with the next block too
+          continue;
+        }
+      }
+
+      dp = dp->df_next;
+    }
+  } while (pass++ < 4);  // use limited number of passes to avoid excessive looping
+}
+
 /// Find the inline difference within a diff block among different buffers.  Do
 /// this by splitting each block's content into characters or words, and then
 /// use internal xdiff to calculate the per-character/word diff.  The result is
@@ -3319,7 +3417,11 @@ static void diff_find_change_inline_diff(diff_T *dp)
   }
   diff_T *new_diff = curtab->tp_first_diff;
 
-  if (diff_flags & DIFF_INLINE_CHAR && file1_idx != -1) {
+  if (diff_flags & DIFF_INLINE_WORD && file1_idx != -1) {
+    if (diff_flags & DIFF_MERGE_BLOCKS) {
+      diff_refine_inline_word_highlight(new_diff, linemap, file1_idx, dp->df_lnum[file1_idx]);
+    }
+  } else if (diff_flags & DIFF_INLINE_CHAR && file1_idx != -1) {
     diff_refine_inline_char_highlight(new_diff, linemap, file1_idx);
   }
 
