@@ -2373,6 +2373,7 @@ local options = {
         { 'algorithm:', { 'myers', 'minimal', 'patience', 'histogram' } },
         { 'inline:', { 'none', 'simple', 'char', 'word' } },
         'linematch:',
+        'mergeblocks',
       },
       deny_duplicates = true,
       desc = [=[
@@ -2500,6 +2501,13 @@ local options = {
         	vertical	Start diff mode with vertical splits (unless
         			explicitly specified otherwise).
 
+        	mergeblocks	When using 'inline:word', merge adjacent diff
+        			blocks that are separated by small gaps (<=2
+        			bytes) of whitespace or punctuation to reduce
+        			visual fragmentation.  Off by default.
+        			Without mergeblocks:  [foo] [bar]    (fragmented)
+        			With mergeblocks:     [foo bar]      (merged)
+        			To enable:            :set diffopt+=mergeblocks
         Examples: >vim
         	set diffopt=internal,filler,context:4
         	set diffopt=
